--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="assets//images/Sertec-logo.png" alt="logo">
                 Conf Hawaii
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
